Done with this project

--- a/src/main/resources/com/example/jfx_test/eventHandler.fxml
+++ b/src/main/resources/com/example/jfx_test/eventHandler.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Circle?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jfx_test.EventController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.jfx_test.EventHandlerController">
    <children>
       <Button layoutX="282.0" layoutY="35.0" mnemonicParsing="false" onAction="#up" text="Up" />
       <Button layoutX="33.0" layoutY="187.0" mnemonicParsing="false" onAction="#left" text="Left" />
